<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corners_20"
    android:padding="@dimen/size_20">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_21"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toTopOf="@id/tvAboutUs"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/size_40"
        android:layout_height="@dimen/size_40"
        android:background="@android:color/transparent"
        android:contentDescription="@string/_0_0"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAboutUs"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/content_about_us"
        android:textColor="@color/black"
        android:justificationMode="inter_word"
        android:textSize="@dimen/text_size_16"
        app:fontFamily="@font/inter_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>