<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corners_20"
    android:padding="@dimen/size_20">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/passcode"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasscode"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:outlineSpotShadowColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/input_passcode"
            android:inputType="numberPassword"
            android:paddingHorizontal="10dp"
            android:textColor="#050505"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRePasscode"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:outlineSpotShadowColor="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPasscode"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editRePasscode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/re_passcode"
            android:inputType="numberPassword"
            android:paddingHorizontal="10dp"
            android:textColor="#050505"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_40"
        android:layout_marginTop="@dimen/size_20"
        android:background="@drawable/button_background_color"
        android:text="@string/cancel"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutRePasscode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_20"
        android:layout_marginEnd="@dimen/size_40"
        android:background="@drawable/button_background_color"
        android:text="@string/confirm"
        android:textColor="@drawable/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutRePasscode" />

</androidx.constraintlayout.widget.ConstraintLayout>